@@ -1,5 +1,6 @@
 1.0.10 (unreleased)
 ===================
+  - Add getTableItemList for OOGranulate
   - Add getParagraphItemList and getParagraphItem for OOGranulate
   - Add getImageItemList and getImage for OOGranulate
   - Add OdfDocument
